<?xml version="1.0"?>
<package format="2">
  <name>fw_rev_04_sim</name>
  <version>1.0.0</version>
  <description>
    Gazebo simulation package for the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <maintainer email="jay.cho@samtel.co.kr">jay</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
